--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "03_state",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vityamachine.github.io/football-api-demo",
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
@@ -13,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "formik": "^2.2.9",
+    "gh-pages": "^5.0.0",
     "nanoid": "^4.0.2",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
@@ -23,6 +25,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
